# simple-subordinate-operator

./: LICENSE  README.md  charmcraft.yaml  pyproject.toml  tox.ini
src/: charm.py
tests/integration/: test_charm.py
tests/unit/: test_charm.py
