[project]
name = "simple-subordinate-operator"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"

[dependency-groups]
charm = [
  "ops>=2.20"
]

libs = [
  "ops>=2.20"
]

format = [
  "ruff==0.11.7"
]

lint = [
    "codespell==2.4.1"
]

unit = [
    "coverage[toml]==7.6.1",
]

integration = [
    "pytest",
    'juju>=3.6.0; python_version > "3.10"',
]

[tool.uv]
no-binary = true
build-constraint-dependencies = [
    "setuptools_scm < 8.3.0; python_version < '3.10'",
    "maturin < 1.8.4; python_version <= '3.8'",
    "setuptools-rust < 1.11; python_version <= '3.8'"
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
extend-exclude = ["__pycache__", "*.egg_info"]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/**.py"]
